[package]
name = "nablo_data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.196", features = ["derive"] }
thiserror = "1.0.56"
nablo_shape = { path = "../nablo_shape" }
time = { version = "0.3.30", features = [ "std", "wasm-bindgen", "macros", "serde" ]}